objects/LLC_BI__ProductCCL__c.object
<CustomObject>
    <description>The Product CCL ( Closing Check List) object is used to link products to their appropriate closing checklist</description>
    <fields>
        <fullName>LLC_BI__Closing_Checklist__c</fullName>
        <description>This field is not required but is automatically populated. It is used to associate the Closing Checklist record to a product. This is applicable to classic Document Manager.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>ProductCCL</relationshipLabel>
        <relationshipName>ProductCCL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This field is not required but is automatically populated. It is used to associate the to the Product record to the Closing Checklist record. This is applicable to classic Document Manager.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>ProductCCL</relationshipLabel>
        <relationshipName>ProductCCL</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ProductCCL</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCL-{00000000}</displayFormat>
        <label>Product CCL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductCCL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>